Java/Compiletime/test-data/jacks-pass/jls/classes/constructor-declarations/constructor-body/explicit-constructor-invocations/T8851e3.java

class T8851e3 {
    
	static class Top {
	    int x;
	    class Dummy {
		Dummy(Object o) {}
	    }
	    class Inside extends Dummy {
		Inside() {
		    super(new Object() { int r = x; }); // error
		}
	    }
	}
    
}
